--- a/src/pages/indexPage.css
+++ b/src/pages/indexPage.css
@@ -9,26 +9,27 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
+}
   
   /* Modal Content/Box */
-  .mmodal-content {
-    background-color: rgba(0, 0, 0, 1);
-    margin: 10% auto;
-    /* padding: 8px; */
-    /* border: 1px solid #888; */
-    max-width: 650px;
-    height: 375px;
-    position: relative;
-    /* border-radius: 5px; */
-    border-radius: unset !important;
-  }
-  .mmodal-content .right_icon {
+.mmodal-content {
+  background-color: rgba(0, 0, 0, 1);
+  margin: 10% auto;
+  /* padding: 8px; */
+  /* border: 1px solid #888; */
+  max-width: 650px;
+  height: 375px;
+  position: relative;
+  /* border-radius: 5px; */
+  border-radius: unset !important;
+}
+  
+.mmodal-content .right_icon {
     position: absolute;
     content: "";
     height: 30px;
     width: 47px;
-    right: -71px;
+    right: -50px;
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
@@ -39,6 +40,7 @@
     transition: .3s all;
     cursor: pointer;
 }
+
 .mmodal-content .right_icon:hover {
     color: #333;
 }
@@ -48,7 +50,7 @@
     content: "";
     height: 30px;
     width: 47px;
-    left: -71px;
+    left: -50px;
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
@@ -59,30 +61,30 @@
     transition: .3s all;
     cursor: pointer;
 }
+
 .mmodal-content .left_icon:hover{
     color:#333
 }
 
-
   /* The Close Button */
-  .mclose {
-    color: #fff;
-    float: right;
-    font-size: 44px;
-    font-weight: bold;
-    position: absolute;
-    right: -32px;
-    top: -28px;
-  }
+.mclose {
+  color: #fff;
+  float: right;
+  font-size: 44px;
+  font-weight: bold;
+  position: absolute;
+  right: -32px;
+  top: -28px;
+}
   
-  .mclose:hover,
-  .mclose:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+.mclose:hover,
+.mclose:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 
-  a.self_item_statement {
+a.self_item_statement {
     position: absolute;
     left: 10%;
     bottom: 0;
@@ -94,4 +96,8 @@
 
 .modal-header {
   border: none !important;
+}
+
+.play-button:hover {
+  color: rgba(0, 0, 0, 1);
 }
