--- a/src/pages/indexPage.css
+++ b/src/pages/indexPage.css
@@ -14,6 +14,11 @@
     background-color: rgb(0,0,0,1); /* Fallback color */
     background-color: rgba(0,0,0,1); /* Black w/ opacity */
 }
+
+.statement-nb {
+  font-size: 12px;
+  margin-top: 20px;
+}
   
   /* Modal Content/Box */
 .mmodal-content {
